--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,26 +1,25 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<!-- Modal HTML -->
-<div id="myModal" class="modal fade">
+
+<!-- Modal -->
+<div  class="modal modal-xl fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h5 class="modal-title">Confirmation</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-          <div class="modal-body">
-              <p>Do you want to save changes to this document before closing?</p>
-              <p class="text-secondary"><small>If you don't save, your changes will be lost.</small></p>
-          </div>
-          <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="titleModal"></h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        
+      </div>
+    </div>
   </div>
 </div>
-<!-- END Modal HTML -->
+
 
 
 
@@ -215,6 +214,7 @@ fetch("../assets/data/item_data.json").then(
 
 function expand(id) {
   console.log(itemData[id]);
+  $('#titleModal').text(itemData[id].title);
   $('#myModal').modal('show');
 }
 
