separate search and browse pages

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -51,6 +51,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="/">Search</a></li>
+          <li><a class="nav-link scrollto" href="browse.html">Browse</a></li>
           <li><a class="nav-link scrollto" href="about.html">About</a></li>
 
         </ul>
